# KinectAzureDKProgramming

./: ARRenderer.cpp  ARRenderer.h  CMakeLists.txt  ColorFragmentShader.fragmentshader  DepthPixelColorizer.h  LICENSE  Pixel.h  PointCloud.vertexshader  PointCloudRenderer.cpp  PointCloudRenderer.h  README.md  Shader.cpp  Shader.h  StaticImageProperties.cpp  StaticImageProperties.h  Texture.cpp  Texture.h  TransformVertexShader_AR.vertexshader  Util.cpp  Util.h  VideoRenderer.cpp  VideoRenderer.h
Aruco_TwoKinects_Calibration_Extrinsics/: CMakeLists.txt  Source_TwoKinects_Calibration.cpp
OneKinect_Playback_RGB_DEPTH_IR/: CMakeLists.txt  Source_Playback.cpp
OneKinect_Recording_RGB_DEPTH_IR/: CMakeLists.txt  Source_Recording.cpp
Open3D_OneKinect/: CMakeLists.txt  Source_Open3D.cpp  azure_kinect.json  azure_kinect_intrinsic.json
OpenCV_OneKinect/: CMakeLists.txt  Source_1.cpp
OpenCV_TwoKinects/: CMakeLists.txt  Source_2.cpp
OpenCV_TwoKinects_GreenScreen/: CMakeLists.txt  MultiDeviceCapturer.h  Source_2_greenscreen.cpp
OpenGL_GLFW_GLEW_ArUco_AR/: CMakeLists.txt  Source_gl3.cpp
OpenGL_GLFW_GLEW_PointCloudRenderer/: CMakeLists.txt  Source_gl3_point_cloud.cpp
OpenGL_GLUT_ArUco_AR/: CMakeLists.txt  Source_aruco.cpp
OpenGL_GLUT_ShowImage/: CMakeLists.txt  Source_GL_Color_k4a_image.cpp  Source_GL_Depth_k4a_image.cpp  Source_GL_IR_k4a_image.cpp
Shader/: TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader
cmake/: azure-kinect-sensor-sdk-config.cmake
